--- a/richu_web/assets/less/main.less
+++ b/richu_web/assets/less/main.less
@@ -708,9 +708,10 @@ a {
 // about
 .about-top-banner {
   width: 100%;
-  height: 640px;
-  background-repeat: no-repeat;
-  // background-size: 100% 100%;
+
+  .banner-img {
+    width: 100%;
+  }
 }
 
 .about-tab-container {
@@ -916,21 +917,20 @@ a {
 }
 
 // 集团产业
-.project-top-banner {
-  width: 100%;
-  height: 637px;
-  overflow: hidden;
+// .project-top-banner {//   width: 100%;
+//   height: 637px;
+//   overflow: hidden;
 
-  .banner-item {
-    display: none;
-    width: 100%;
-    height: 100%;
+//   .banner-item {
+//     display: none;
+//     width: 100%;
+//     height: 100%;
 
-    &.active {
-      display: block;
-    }
-  }
-}
+//     &.active {
+//       display: block;
+//     }
+//   }
+// }
 
 .project-tab-container {
   .project-tab {
