--- a/richu_web/assets/less/response.less
+++ b/richu_web/assets/less/response.less
@@ -149,9 +149,9 @@
     }
   }
 
-  .project-top-banner {
-    height: 340px;
-  }
+  // .project-top-banner {
+  //   height: 340px;
+  // }
 
   .project-tab-container {
     .project-tab {
@@ -574,11 +574,9 @@
         width: 100%;
         margin-bottom: 15px;
 
-        .arrow-left {
-        }
+        .arrow-left {}
 
-        .arrow-right {
-        }
+        .arrow-right {}
       }
     }
   }
@@ -679,7 +677,7 @@
 
   .culture-top-banner,
   .about-top-banner {
-    height: 340px;
+    // height: 340px;
     background-position: bottom left;
     background-size: 200% 100%;
   }
@@ -1157,11 +1155,9 @@
         width: 100%;
         margin-bottom: 15px;
 
-        .arrow-left {
-        }
+        .arrow-left {}
 
-        .arrow-right {
-        }
+        .arrow-right {}
       }
     }
   }
